# PlantProtectionSim

./: .gitignore  README.md  enemie.py  enemy.py  grid.py  gui.py  log.pkl  main.py  plant.py  pyproject.toml  simulation.py  tests.py  tooltip.py
.github/workflows/: mirror-to-gitlab.yml
_files/sim10_2/: sim.pkl
_files/sim10_3/: sim.pkl
_files/sim10_4/: sim.pkl
_files/sim10_5/: sim.pkl
_files/sim5_/: sim.pkl
_files/sim5_2/: sim.pkl
_files/sim6_/: s514.pkl
_files/sim8_2/: sim.pkl
_files/sim_sym/: sim.pkl
controllers/: fileManager.py  simulation.py
models/: airCon.py  connection.py  enemy.py  enemyCluster.py  grid.py  plant.py  signal.py  substance.py  symCon.py  symConnection.py  toxin.py
tests/: customTestResults.py  testsEnemyClusters.py
views/: diagrams.py  gui.py
