[tool.poetry]
name = "ppstool"
version = "0.1"
description = ""
authors = ["lucas-diet <lucas.d1@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
matplotlib = "^3.9.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
